Коректировка пользователя
