# internal/oas/oas_response_decoders_gen.go
@@ -108,53 +108,6 @@ func decodeAddStatusResponse(resp *http.Response) (res AddStatusRes, _ error) {
 	return res, validate.UnexpectedStatusCode(resp.StatusCode)
 }
 
-func decodeCheckSmsResponse(resp *http.Response) (res CheckSmsRes, _ error) {
-	switch resp.StatusCode {
-	case 200:
-		// Code 200.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response Token
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 400:
-		// Code 400.
-		return &CheckSmsBadRequest{}, nil
-	case 404:
-		// Code 404.
-		return &CheckSmsNotFound{}, nil
-	}
-	return res, validate.UnexpectedStatusCode(resp.StatusCode)
-}
-
 func decodeCheckUserResponse(resp *http.Response) (res CheckUserRes, _ error) {
 	switch resp.StatusCode {
 	case 200:
@@ -473,6 +426,62 @@ func decodeGetUserResponse(resp *http.Response) (res GetUserRes, _ error) {
 	return res, validate.UnexpectedStatusCode(resp.StatusCode)
 }
 
+func decodeGetUsersResponse(resp *http.Response) (res GetUsersRes, _ error) {
+	switch resp.StatusCode {
+	case 200:
+		// Code 200.
+		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
+		if err != nil {
+			return res, errors.Wrap(err, "parse media type")
+		}
+		switch {
+		case ct == "application/json":
+			buf, err := io.ReadAll(resp.Body)
+			if err != nil {
+				return res, err
+			}
+			d := jx.DecodeBytes(buf)
+
+			var response UsersResponse
+			if err := func() error {
+				if err := response.Decode(d); err != nil {
+					return err
+				}
+				if err := d.Skip(); err != io.EOF {
+					return errors.New("unexpected trailing data")
+				}
+				return nil
+			}(); err != nil {
+				err = &ogenerrors.DecodeBodyError{
+					ContentType: ct,
+					Body:        buf,
+					Err:         err,
+				}
+				return res, err
+			}
+			// Validate response.
+			if err := func() error {
+				if err := response.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return res, errors.Wrap(err, "validate")
+			}
+			return &response, nil
+		default:
+			return res, validate.InvalidContentType(ct)
+		}
+	case 400:
+		// Code 400.
+		return &GetUsersBadRequest{}, nil
+	case 404:
+		// Code 404.
+		return &GetUsersNotFound{}, nil
+	}
+	return res, validate.UnexpectedStatusCode(resp.StatusCode)
+}
+
 func decodeLogoutResponse(resp *http.Response) (res LogoutRes, _ error) {
 	switch resp.StatusCode {
 	case 200:
@@ -484,21 +493,6 @@ func decodeLogoutResponse(resp *http.Response) (res LogoutRes, _ error) {
 	case 404:
 		// Code 404.
 		return &LogoutNotFound{}, nil
-	}
-	return res, validate.UnexpectedStatusCode(resp.StatusCode)
-}
-
-func decodeSendSmsResponse(resp *http.Response) (res SendSmsRes, _ error) {
-	switch resp.StatusCode {
-	case 200:
-		// Code 200.
-		return &SendSmsOK{}, nil
-	case 400:
-		// Code 400.
-		return &SendSmsBadRequest{}, nil
-	case 404:
-		// Code 404.
-		return &SendSmsNotFound{}, nil
 	}
 	return res, validate.UnexpectedStatusCode(resp.StatusCode)
 }
